# gh-reports

./: Cargo.toml  Dockerfile
.github/workflows/: main.yml
cloud/: docker-compose.yml
src/: client.rs  main.rs  models.rs
src/clients/: client.rs  github.rs  mod.rs  responses.rs
src/models/: mod.rs
src/routes/: auth.rs  health.rs  home.rs  mod.rs  reports.rs
src/services/: auth.rs  factory.rs  milestone.rs  mod.rs
src/templates/: html.hbs  mod.rs  query.hbs
src/utils/: http.rs  mod.rs  warp.rs
templates/: home.html  login.html  query.html
